// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/switch/demo/basic.js correctly test 1`] = `
<span
  class="jc-switch jc-switch-checked"
  tabindex="0"
>
  <span
    class="jc-switch-inner"
  />
</span>
`;

exports[`renders ./components/switch/demo/disabled.js correctly test 1`] = `
<div>
  <span
    class="jc-switch jc-switch-checked jc-switch-disabled"
    tabindex="-1"
  >
    <span
      class="jc-switch-inner"
    />
  </span>
  <br />
  <button
    class="jc-btn jc-btn-primary"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>
</div>
`;

exports[`renders ./components/switch/demo/loading.js correctly test 1`] = `
<div>
  <span
    class="jc-switch-loading jc-switch jc-switch-checked"
    tabindex="0"
  >
    <span
      class="jc-switch-inner"
    />
  </span>
  <br />
  <span
    class="jc-switch-small jc-switch-loading jc-switch"
    tabindex="0"
  >
    <span
      class="jc-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/size.js correctly test 1`] = `
<div>
  <span
    class="jc-switch jc-switch-checked"
    tabindex="0"
  >
    <span
      class="jc-switch-inner"
    />
  </span>
  <br />
  <span
    class="jc-switch-small jc-switch jc-switch-checked"
    tabindex="0"
  >
    <span
      class="jc-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/text.js correctly test 1`] = `
<div>
  <span
    class="jc-switch jc-switch-checked"
    tabindex="0"
  >
    <span
      class="jc-switch-inner"
    >
      开
    </span>
  </span>
  <br />
  <span
    class="jc-switch"
    tabindex="0"
  >
    <span
      class="jc-switch-inner"
    >
      0
    </span>
  </span>
  <br />
  <span
    class="jc-switch jc-switch-checked"
    tabindex="0"
  >
    <span
      class="jc-switch-inner"
    >
      <i
        class="jcicon jcicon-check "
      />
    </span>
  </span>
</div>
`;
